# Theatre

./: .gitignore  CMakeLists.txt  README.md  console_ui.cpp  console_ui.h  main.cpp  theatre.h
.cache/clangd/index/: action_movie.cpp.F137A70627C58655.idx  action_movie.h.3FF8FE1E4751F846.idx  cartoon.cpp.C99D3947DF6619E5.idx  cartoon.h.8230BBC24E331CE9.idx  choir.cpp.AA8305F6E2676CB6.idx  choir.h.B202EC2C280D47AA.idx  drama_theatre.cpp.7818E4A0D1D10BA7.idx  enums.h.71AA61872ED17D02.idx  grand_opera.cpp.1DC52C924A21E333.idx  grand_opera.h.53EBE6FCEDA680B9.idx  horror_movie.cpp.7EB1FD64CABD39BD.idx  horror_movie.h.49C97583297D7059.idx  main.cpp.2141854528A76FC0.idx  movie.cpp.1E30AECFBDD0D8B3.idx  movie.h.B7544EDB96D511CF.idx  movie_theatre.cpp.DF5A4D8A3C89A941.idx  opera.cpp.953CDED94B188630.idx  opera.h.5D69F777FF08FF23.idx  opera_theatre.cpp.33C68D9254BB408E.idx  opera_theatre.h.930BDAB38F5ECFD3.idx  order_request.h.D96349DEC0EBCF76.idx  play.cpp.FB9DF60078F32A66.idx  play.h.FC8E0D53F53E851E.idx  session.cpp.BC3CFAE6157978F0.idx  session.h.D622C99325CEED37.idx  theatre.cpp.5109E8C670155DAE.idx  theatre.h.0A288D2957496F2F.idx  theatre.h.8E33CF32C271D1FC.idx
order_request/: enums.h  order_request.h
session/: session.cpp  session.h
session/drama_theatre/: comedy_play.cpp  comedy_play.h  play.cpp  play.h  tragedy_play.cpp  tragedy_play.h
session/movie_theatre/: action_movie.cpp  action_movie.h  cartoon.cpp  cartoon.h  horror_movie.cpp  horror_movie.h  movie.cpp  movie.h
session/opera_theatre/: choir.cpp  choir.h  grand_opera.cpp  grand_opera.h  opera.cpp  opera.h
tests/: test_movies.cpp  test_orders.cpp
theatre/: drama_theatre.cpp  drama_theatre.h  movie_theatre.cpp  movie_theatre.h  opera_theatre.cpp  opera_theatre.h  theatre.cpp  theatre.h
